--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="row mt-5 main">
 			<div class="col-12 text-center">
 				
-				<div class="firstclk text-center">Click Here !</div>
+				<div class="firstclk text-center"> Gõ cửa trái tim của anh ở dòng này  nhé Phương đáng yêu :))</div>
 
 
 				<div class="drawHeart mt-4">
@@ -72,7 +72,7 @@
 								<div class="modal-body text-danger"></div>
 
 								<div class="modal-footer">
-									<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+									<button type="button" class="btn btn-danger" data-dismiss="modal">Thoát</button>
 								</div>
 
 							</div>
@@ -123,7 +123,7 @@
 </svg>
 
 <div class="col-12 text-center tamthu" style="font-size: 18pt;">
-	<p class="parse">Tớ có điều muốn nói. Ấn vào lá thư để đọc nhé !</p>
+	<p class="parse"> Anh có điều muốn nói. Ấn vào lá thư để đọc nhé !</p>
 	<a href="index2.html" target="_blank"><i class="far fa-envelope lathu" style="font-size: 40pt; color: #ef2a4d;"></i></a>
 </div>
 
