--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<!-- Bootstrap CSS -->
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 	<div class="container mt-4 layer">
@@ -24,14 +30,40 @@
 						<div class="tamthu p-5">
 							Đời anh là đời buồn ! Nổi buồn nhiều hơn niềm vui. Vây quanh anh là sự cô độc. Hạnh phúc đối với anh là điều xa xỉ nên anh chẳng dám mong cầu hay hi vọng mình sẽ có được một tình yêu đẹp. Nhưng ... "từ khi gặp em anh thấy cuộc sống vui nhiều, cứ cười tủm tìm từ sáng cho đến chiều".<br>Em đến như một món quà bất ngờ không có sự chuẩn bị trước. Anh cũng không ngờ được tình cảm của anh xuất phát đột ngột như vậy. Nếu giờ em hỏi anh, vì sao anh thích em ? Anh không biết phải trả lời như thế nào ... vì trong khoảnh khắc nào đó, anh nhận ra mình đang nhớ em. Có lẽ anh nhận ra mình thích em từ lúc đấy và lý do thì chắc đơn giản là ... anh thích em. Em có thể nhắn tin cho anh bất cứ khi nào em muốn.
 						</div>
-						<div class="col-12 text-center">
-							<div class="btn btn-primary mb-5"><a href="https://facebook.com" style="color: #f4f4f4;">Facebook của anh đây <i class="fab fa-facebook-messenger ml-2"></i></a></div>
+						<div class="col-12 text-center" style="padding-bottom: 50px;">
+							<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+								 Trả lời anh câu hỏi này nhé =)
+							</button>
+
+							<!-- Modal -->
+							<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+								<div class="modal-dialog" role="document">
+									<div class="modal-content">
+										<div class="modal-header">
+											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+												<span aria-hidden="true">&times;</span>
+											</button>
+										</div>
+										<div class="modal-body">
+											 Em có đồng ý làm người yêu ở thời điểm hiện tại và vợ anh trong tương lai không ?
+										</div>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-secondary" data-dismiss="modal">Đồng ý</button>
+											<button type="button" class="btn btn-primary"> Không đồng ý </button>
+										</div>
+									</div>
+								</div>
+							</div>
+
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="javascript/charming.js"></script>
 	<script src="javascript/anime.js"></script>
 	<script src="javascript/scrollMonitor.js"></script>
